--- a/src/main/webapp/resources/css/profile.css
+++ b/src/main/webapp/resources/css/profile.css
@@ -1,5 +1,18 @@
+html, body {
+	height: 100%;
+	margin: 0%;
+	padding: 0%;
+	overflow-x: hidden;
+}
+
 body {
-    background-color: #f9f9fa
+	display: flex;
+	flex-direction: column;
+	background-color: #f9f9fa
+}
+
+main {
+	flex-grow: 1;
 }
 
 .padding {
